<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="com.jesusbadenas.kotlin_clean_compose_project.domain.model.User" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/user_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <RelativeLayout
                android:id="@+id/container_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/touchable_background_white">

                <ImageView
                    android:id="@+id/image_user"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/user_image_description"
                    bind:imageUrl="@{user.coverUrl}" />

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/image_user"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="4dp"
                    android:layout_toEndOf="@id/image_user"
                    android:text="@{user.fullName}"
                    android:textColor="@color/black_87pc"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_name"
                    android:layout_alignStart="@id/text_name"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="24dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{user.description}"
                    android:textColor="@color/black_87pc" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/container_character"
                android:background="@color/white">

                <View
                    android:id="@+id/separator_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentTop="true"
                    android:background="@color/light_grey" />

                <TextView
                    android:id="@+id/text_view"
                    style="@style/CardButtonTextStyle"
                    android:layout_below="@+id/separator_line"
                    android:background="@drawable/touchable_background_white"
                    android:text="@string/text_view"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:id="@+id/text_tab"
                    style="@style/CardButtonTextStyle"
                    android:layout_alignBottom="@+id/text_view"
                    android:layout_toEndOf="@+id/text_view"
                    android:background="@drawable/touchable_background_white"
                    android:text="@string/text_collections"
                    android:textColor="@color/primary" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>
